--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,8 @@ spring.jpa.generate-ddl=false
 spring.servlet.multipart.enabled=true
 server.port=8090
 
-
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 
-
-
-
-
+# Add the Hibernate dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
