--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ server.port=8090
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 # Add the Hibernate dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
