--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=premier-construction
-spring.datasource.url=jdbc:mysql://localhost:3306/premier_construction
+spring.datasource.url=jdbc:mysql://192.168.0.3:3306/premier_construction
 spring.datasource.username=premier_construction
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
