--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=premier-construction
-spring.datasource.url=jdbc:mysql://192.168.0.3:3306/premier_construction
-spring.datasource.username=premier_construction
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://203.163.250.236:3306/wbreat
+spring.datasource.username=wbreat
+spring.datasource.password=log
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 # Disable automatic schema generation
