--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=premier-construction
-spring.datasource.url=jdbc:mysql://203.163.250.236:3306/wbreat
-spring.datasource.username=wbreat
-spring.datasource.password=log
+spring.datasource.url=jdbc:mysql://ajith465.helioho.st:3306/ajith465_premier_construction
+spring.datasource.username=ajith465_premier_construction
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 # Disable automatic schema generation
